# needle

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  count.cpp  count_minimizer.cpp  count_minimizer_occurences3.cpp  ibf.cpp  ibf.h  minimizer.h  minimizer3.h  needle.cpp  query.cpp  search.cpp  search.h  test.cpp
.github/config/: codechecker.yml
.github/workflows/: cancel.yml  ci.yml  ci_codeql.yml  ci_coverage.yml  ci_documentation.yml  ci_install.yml  ci_license.yml  ci_lint.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  ci_sanitizer.yml  cron_codechecker.yml  cron_codeql.yml  cron_sanitizer.yml
cmake/: cpack_install.cmake.in  output_directories.cmake  package-lock.cmake  package.cmake
cmake/test/: add_local_data.cmake  config.cmake  coverage.cmake  declare_datasource.cmake
doc/: CMakeLists.txt  README.md  doxygen_cfg
example/: gene.fasta  mini_example.fasta  mini_gen.fasta  mini_gen3.fasta  mini_genom.fasta
include/: count.hpp  delete.hpp  estimate.h  estimate.hpp  fastq_conversion.hpp  give_me_five.hpp  ibf.h  ibf.hpp  insert.hpp  minimiser.h  minimiser.hpp  minimizer.h  search.h  shared.h  shared.hpp
include/layout/: layout.hpp
include/misc/: calculate_cutoff.hpp  charconv  check_cutoffs_samples.hpp  check_for_fasta_format.hpp  debug.hpp  filenames.hpp  fill_hash_table.hpp  get_expression_thresholds.hpp  get_include_set_table.hpp  needle_matrix.hpp  read_levels.hpp  stream.hpp
lib/: README.md
src/: CMakeLists.txt  count.cpp  delete.cpp  estimate.cpp  fastq_conversion.cpp  give_me_five.cpp  ibf.cpp  insert.cpp  main.cpp  minimiser.cpp  needle.cpp  search.cpp
src/layout/: CMakeLists.txt  layout.cpp
src/misc/: calculate_cutoff.cpp  check_cutoffs_samples.cpp  check_for_fasta_format.cpp  debug.cpp  fill_hash_table.cpp  get_expression_thresholds.cpp  get_include_set_table.cpp  read_levels.cpp  stream.cpp
test/: CMakeLists.txt  app_test.hpp
test/api/: CMakeLists.txt  README.md  count_test.cpp  estimate_test.cpp  give_me_five_test.cpp  ibf_test.cpp  ibfmin_test.cpp  insert_delete_test.cpp  minimiser_test.cpp  test.cpp  test_needle.cpp
test/benchmark/: README.md
test/cli/: CMakeLists.txt  README.md  cli_test.cpp  cli_test.hpp  count_options_test.cpp  delete_options_test.cpp  estimate_options_test.cpp  fastq_to_fasta_options_test.cpp  ibf_options_test.cpp  insert_options_test.cpp  layout_options_test.cpp  minimiser_options_test.cpp  needle_options_test.cpp  search_options_test.cpp  stats_options_test.cpp  test_options_test.cpp
test/cmake/: build_googletest.cmake
test/coverage/: README.md
test/data/: Header_mini_example.txt  IBF_0  IBF_0.000000  IBF_0.500000  IBF_1  IBF_1.000000  IBF_2  IBF_3  IBF_32  IBF_4  IBF_Level_0  IBF_Level_1  IBF_Level_2  README.md  REUSE.toml  datasources.cmake  exp_01.header  exp_01.minimiser  exp_11.header  exp_11.minimiser  gene4.fasta  in.fastq  mini_example.header  mini_example.minimiser  mini_example.minimizer  mini_example2.fasta  mini_example2.header  mini_example2.minimiser  mini_example_exp.tsv  mini_gen.fasta  mini_gen2.fasta  mini_gen2.genome  mini_gen3.fasta  mini_gen4.fasta  mini_genes.fasta
test/unit/: README.md
utils/: README.md  REUSE.toml  accession.lst  breastcancer.R  breastcancer_big.R  compare_preprocess.sh  experiments.out  get_gene_exp.py  metagraph.sh  needle_gene_exp.py  run_bcalm4.sh  run_build.sh  run_clean.sh  run_clean_smooth.sh  run_kmc.sh  run_kmc4.sh  samples.in  sras_types.csv  tissue_type.R  true_breast.csv  unify_results.py
workflow/cwl/: needle-count.cwl  needle-estimate.cwl  needle-genome.cwl  needle-ibf.cwl  needle-ibfmin.cwl  needle-minimiser.cwl
